refactor(model): redesign slicing contracts